--- a/SurfsUp/SurfsUp/Views/Boards/Index.cshtml
+++ b/SurfsUp/SurfsUp/Views/Boards/Index.cshtml
@@ -24,25 +24,26 @@
                 Image
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                 <a asp-action="Index" asp-route-sortOrder="@ViewData["NameSortParm"]"> @Html.DisplayNameFor(model => model.Name) </a>
             </th>
             <th>
-                Length(feet)
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["LengthSortParm"]">  Length(feet) </a>
             </th>
             <th>
-                Width(inches)
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["WidthSortParm"]"> Width(inches) </a>
             </th>
             <th>
-                Thickness(inches)
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["ThicknessSortParm"]"> Thickness(inches) </a>
             </th>
             <th>
-                Volume(L)
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["VolumeSortParm"]"> Volume(L) </a>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Type)
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["VolumeSortParm"]"> @Html.DisplayNameFor(model => model.Volume) </a>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Price)
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["PriceSortParm"]"> @Html.DisplayNameFor(model => model.Price) </a>
+                
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Equipment)
