--- a/SurfsUp/SurfsUp/Views/Boards/Index.cshtml
+++ b/SurfsUp/SurfsUp/Views/Boards/Index.cshtml
@@ -48,6 +48,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Equipment)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.IsRented)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -82,6 +85,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Equipment)
             </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.IsRented)
+                </td>
             <td>
                 @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |*@
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a>
