--- a/SurfsUp/SurfsUp/Views/Boards/Index.cshtml
+++ b/SurfsUp/SurfsUp/Views/Boards/Index.cshtml
@@ -4,11 +4,14 @@
     ViewData["Title"] = "Board Overview";
 }
 
-<form asp-controller="Boards" asp-action="Index">
-    <p>
-        Name: <input type="text" name="SearchString"/>
-        <input type="submit" value="Search" />
-    </p>
+<form asp-action="Index" method="get">
+    <div class="form-actions no-color">
+        <p>
+            Find by name: <input type="text" name="SearchString" value="@ViewData["CurrentFilter"]" />
+            <input type="submit" value="Search" style="background-color: gray ;  class="btn" /> |
+            <a asp-action="Index">Back to Full List</a>
+        </p>
+    </div>
 </form>
 
 
@@ -39,7 +42,7 @@
                 <a asp-action="Index" asp-route-sortOrder="@ViewData["VolumeSortParm"]"> Volume(L) </a>
             </th>
             <th>
-                <a asp-action="Index" asp-route-sortOrder="@ViewData["VolumeSortParm"]"> @Html.DisplayNameFor(model => model.Volume) </a>
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["VolumeSortParm"]"> @Html.DisplayNameFor(model => model.Type) </a>
             </th>
             <th>
                 <a asp-action="Index" asp-route-sortOrder="@ViewData["PriceSortParm"]"> @Html.DisplayNameFor(model => model.Price) </a>
