--- a/SurfsUp/SurfsUp/Views/Boards/Index.cshtml
+++ b/SurfsUp/SurfsUp/Views/Boards/Index.cshtml
@@ -2,6 +2,16 @@
 
 @{
     ViewData["Title"] = "Board Overview";
+
+    Pager pager = new Pager();
+
+    int pageNo = 0;
+
+    if (ViewBag.Pager != null)
+    {
+        pager = ViewBag.Pager;
+        pageNo = pager.CurrentPage;
+    }
 }
 
 <form asp-controller="Boards" asp-action="Index">
@@ -91,3 +101,21 @@
 }
     </tbody>
 </table>
+
+
+<div class="container">
+    @if (pager.TotalPages > 0)
+    {
+        <ul class="pagination justify-content-end">
+
+            @for (var pge = pager.StartPage; pge <= pager.EndPage; pge++)
+            {
+                <li class="page-item @(pge == pager.CurrentPage ? "active" : "")">
+                    <a class="page-link" asp-controller="Board" asp-action="Index" asp-route-pg="@pge"> @pge </a>
+                </li>
+            }
+
+        </ul>    
+    }
+
+</div>
