--- a/SurfsUp/SurfsUp/Views/Shared/_Layout.cshtml
+++ b/SurfsUp/SurfsUp/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Boards" asp-action="Index">Surfboards</a>
                         </li>
                     </ul>
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
