--- a/SurfsUp/SurfsUp/Views/Admin/Index.cshtml
+++ b/SurfsUp/SurfsUp/Views/Admin/Index.cshtml
@@ -39,6 +39,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Equipment)
             </th>
+			<th>
+				Rented
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -74,6 +77,8 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Equipment)
                 </td>
+				<td>
+					@Html.DisplayFor(modelItem => item.IsRented)
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                     @*<a asp-action="Details" asp-route-id="@item.Id">Details</a>*@
