--- a/SurfsUp/SurfsUp/Views/Admin/Index.cshtml
+++ b/SurfsUp/SurfsUp/Views/Admin/Index.cshtml
@@ -10,7 +10,10 @@
 <h1>Admin Overview</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+	@if (User.IsInRole("Admin"))
+    {
+        <a asp-action="Create">Create New</a>
+    }
 </p>
 <table class="table">
     <thead>
@@ -84,7 +87,7 @@
                 {
                     <td>
                         <a asp-action="Edit" asp-route-id="@item.Id">Rediger</a> |
-                        <a asp-action="Delete" asp-route-id="@item.Id">Slet</a>
+                        <a asp-action="Delete" asp-route-id="@item.Id">Slet</a> |
                         <a asp-action="Details" asp-route-id="@item.Id">Details</a>
                     </td>
 
