--- a/SurfsUp/SurfsUp/Views/Shared/_Layout.cshtml
+++ b/SurfsUp/SurfsUp/Views/Shared/_Layout.cshtml
@@ -14,8 +14,15 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                    <a class="navbar-brand" asp-area="" asp-controller="Boards" asp-action="Index">SurfsUp</a>
 
+                @if (User.IsInRole("Admin"))
+                {
+                    <a class="navbar-brand" asp-area="" asp-controller="Admin" asp-action="Index">Surfsboards</a>
+                }
+                else
+                {
+                    <a class="navbar-brand" asp-area="" asp-controller="Boards" asp-action="Index">Surfsboards</a>
+                }
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -30,14 +37,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                        @if (User.IsInRole("Admin"))
-                        {
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Index">Surfboards</a>
-                        }
-                        else
-                        {
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Boards" asp-action="Index">Surfboards</a>
-						}
+
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
