Lavet Vejr Api til Blazor

--- a/SurfsUp/SurfsUpBlazorApp/_Imports.razor
+++ b/SurfsUp/SurfsUpBlazorApp/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using SurfsUpBlazorApp
 @using SurfsUpBlazorApp.Shared
+@using System.Net.Http.Json
+@using System.Net.Http.Headers
