--- a/SurfsUp/SurfsUpBlazorApp/Pages/_Host.cshtml
+++ b/SurfsUp/SurfsUpBlazorApp/Pages/_Host.cshtml
@@ -1,8 +1,9 @@
 ﻿@page "/"
+
 @namespace SurfsUpBlazorApp.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = "_Layout";
 }
 
-<component type="typeof(App)" render-mode="ServerPrerendered" />
+<component type="typeof(App)" render-mode="Server" />
